--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
                           <div class="single-icon">
                               <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>
                           </div>
-                          <h4>See your Calendar options</h4>
+                          <h4>See Calendar options</h4>
                           <p>Pick the one that fits you the best</p>
                       </div>
                   </div>
@@ -57,9 +57,9 @@
                   <div class="col-12 col-md-4">
                       <div class="single-special text-center wow fadeInUp" data-wow-delay="0.4s">
                           <div class="single-icon">
-                              <i class="fa fa-briefcase" aria-hidden="true"></i>
+                              <i class="fas fa-briefcase" aria-hidden="true"></i>
                           </div>
-                          <h4>Orgainize your recruiting trips!</h4>
+                          <h4>Orgainize recruiting trips!</h4>
                           <p>Take notes on your recruits!</p>
                       </div>
                   </div>
@@ -67,10 +67,10 @@
                   <div class="col-12 col-md-4">
                       <div class="single-special text-center wow fadeInUp" data-wow-delay="0.6s">
                           <div class="single-icon">
-                              <i class="fa fa-credit-card" aria-hidden="true"></i>
+                              <i class="fas fa-user" aria-hidden="true"></i>
                           </div>
-                          <h4>Able to see your calendar from anywhere</h4>
-                          <p>Plus, talk to your coaches!</p>
+                          <h4>Browse top Athletes</h4>
+                          <p>Plus, add them to your list!</p>
                       </div>
                   </div>
               </div>
