FIX: list of unavailable days

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -22,6 +22,7 @@
           <div class="col-xl-4">
             <%= render partial: 'events/upcomingevent', locals: { event: @event, athlete: @athlete }   %>
             <%= render 'shared/form' %>
+            <%= render 'unavailabledays' %>
           </div>
         </div>
       </div>
