--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -5,41 +5,49 @@
       <%= link_to athlete_path(@athlete.id.to_i - 1), class: "mr-5" do %><i class="fas fa-reply"></i><% end %>
 
       <div class="athlete-show-card">
-      <div class="athlete-show-content">
+        <div class="athlete-show-content">
           <h1 class = "card-title"><%= @athlete.first_name %> <%= @athlete.last_name %></h1>
-        <div class="d-flex mb-5">
-         <!--  <%#= link_to athlete_recruit_path(@athlete.recruit.id.to_i - 1) do %><i class="fas fa-reply">Previous Athlete</i><%# end %> -->
+          <div class="d-flex mb-5">
+           <!--  <%#= link_to athlete_recruit_path(@athlete.recruit.id.to_i - 1) do %><i class="fas fa-reply">Previous Athlete</i><%# end %> -->
 
-          <div>
-            <%= image_tag @athlete.photo, class: "card-img-top" %>
+            <div>
+              <%= image_tag @athlete.photo, class: "card-img-top" %>
+            </div>
+
+            <div>
+              <p>Team: <strong class="athlete-show-info">  <%= @athlete.athlete_team %> - <%= @athlete.athlete_team_url %></strong></p>
+              <p>Graduation Year: <strong class="athlete-show-info"><%= @athlete.grad_year %></strong></p>
+              <p>Nationality: <strong class="athlete-show-info"><%= @athlete.nationality %>  <%= c = ISO3166::Country.find_country_by_name(@athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(@athlete.nationality)  %></strong></p>
+              <% if @athlete.first_name == 'Rebecca' %>
+                <p><strong class="athlete-show-info">Bio: </strong>5’9”<br>
+                    Started playing golf at the age of 2<br>
+                    Credits her brother as the person who most influenced her career<br>
+                    Enjoys the piano, violin, puzzles, eating and reading.</p>
+                <p><strong class="athlete-show-info">Awards: </strong>2017 Rolex Player of the Year,<br>2012 Louise Suggs Rolex Rookie of the Year</p>
+              <% end %>
+              <h3 class="mt-3"><strong>STATISTICS</strong></h3>
+              <div class="d-flex">
+                <p>Rating: <strong class="athlete-show-info"><%= @athlete.rating %></strong></p>
+                <p>&nbsp;Divisor: <strong class="athlete-show-info"><%= Faker::Number.within(range: 10..20) %>.<%= Faker::Number.decimal_part(digits: 4) %></strong></p>
+                <p>&nbsp;Points Average: <strong class="athlete-show-info"><%= Faker::Number.within(range: 1000..1500) %>.<%= Faker::Number.decimal_part(digits: 4) %></strong></p>
+              </div>
+            </div>
+            <%# if @athlete.teams.include?(current_user.team) %>
+            <!-- <%#= link_to athlete_recruit_path(@athlete.recruit.id.to_i + 1) do %><i class="fas fa-share">Next Recruit</i><%# end %> -->
           </div>
 
-          <div>
-            <p>Team: <strong class="athlete-show-info">  <%= @athlete.athlete_team %> - <%= @athlete.athlete_team_url %></strong></p>
-            <p>Graduation Year: <strong class="athlete-show-info"><%= @athlete.grad_year %></strong></p>
-            <p>Nationality: <strong class="athlete-show-info"><%= @athlete.nationality %>  <%= c = ISO3166::Country.find_country_by_name(@athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(@athlete.nationality)  %></strong></p>
-            <h3 class="mt-3"><strong>STATISTICS</strong></h3>
-            <div class="d-flex">
-              <p>Rating: <strong class="athlete-show-info"><%= @athlete.rating %></strong></p>
-              <p>&nbsp;Divisor: <strong class="athlete-show-info"><%= Faker::Number.within(range: 10..20) %>.<%= Faker::Number.decimal_part(digits: 4) %></strong></p>
-              <p>&nbsp;Points Average: <strong class="athlete-show-info"><%= Faker::Number.within(range: 1000..1500) %>.<%= Faker::Number.decimal_part(digits: 4) %></strong></p>
+          <div class="mt-3 row justify-content-center">
+            <div class="btn-group btn-group-lg" role="group" aria-label="Add to Recruiting List">
+          <% if !@recruit_names.include?(@athlete.first_name) %>
+              <p>
+                <%= simple_form_for([@athlete, @recruit]) do |f| %>
+                <%= f.submit "Add to Recruiting List", class: "btn" %>
+                <% end %>
+              </p>
+            <% end %>
             </div>
           </div>
-          <%# if @athlete.teams.include?(current_user.team) %>
-          <!-- <%#= link_to athlete_recruit_path(@athlete.recruit.id.to_i + 1) do %><i class="fas fa-share">Next Recruit</i><%# end %> -->
         </div>
-
-        <div class="mt-3 row justify-content-center">
-          <div class="btn-group btn-group-lg" role="group" aria-label="Add to Recruiting List">
-            <p>
-              <%= simple_form_for([@athlete, @recruit]) do |f| %>
-              <%= f.submit "Add to Recruiting List", class: "btn" %>
-              <% end %>
-            </p>
-          </div>
-        </div>
-
-      </div>
       </div>
       <%= link_to athlete_path(@athlete.id.to_i + 1), class: "ml-5" do %><i class="fas fa-share"></i><% end %>
     </div>
